maximum structure of html and add some style of css

--- a/index.html
+++ b/index.html
@@ -5,17 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate from your ability</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gulzar&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--top of the website-->
     <div class="top-banner">
-        <h1>Let's help those who need our support right now</h1>
-        <h4>We know the current situation of Sylher. This is one of the beautiful district in our country. But now-a-days our sylhet if destroyed for the bad effect of flood. People of flooded area nooe our help. we have to rise our hands for them. </h4>
-        <a target="_blank"  href="">Donate Now</a>
+        <h1><span class="white-color">Let's help those who need our support right now</span></h1>
+        <p><span class="white-color">We know the current situation of Sylher. This is one of the beautiful district in our country.</span></p>
+
+        <p><span class="white-color">But now-a-days our sylhet if destroyed for the bad effect of flood. People of flooded area nooe our help. we have to rise our hands for them.</span></p>
+        <a class="donate-button" target="_blank"  href="">Donate Now</a>
+
+        <!--amount decide part-->
+    </div>
+    <div class="decide-amount">
+        <h1>Decide Your Amount</h1>
+        <p>You can decide your amount of donation. some of are given below for you. you can also decide other amount</p>
+        <p>100TK    200TK    500TK    1000TK   5000TK</p>
+        
+        <input type="text">
+        <button class="donate-button">Donate Now</button>
 
     </div>
+
+    <!--donation plan part-->
+    <div>
+        <h1>Our Donate Plan</h1>
+        <p>Here is our donate plan. You can choice anyone of them. Then we use your donation to our plan which you choiced</p>
+
+        <div>
+            <h1>Money for a family</h1>
+            <img src="icon/money.jpg" alt="">
+            <p>In this situation most of the family need more money for recover their problems of flood effect.If you can donate some amount of money to any of the effected family, they will solve at lest some of their problems. Your donation is too much important for them</p>
+        </div>
+
+        <div>
+            <h1>Donation for food</h1>
+            <img src="icon/food.png" alt="">
+            <p>You can donate for food. We will use your donation for our food service. Maximum people right now out of their house. They can't manage their food. Your donation will help us for manage their food.</p>
+        </div>
+
+        <div>
+            <h1>Manage cloth or donate for it</h1>
+            <img src="icon/cloth.png" alt="">
+            <p>In this bad situation they need cloths. Mianly childrens and womens are need this. They are out of their house and can't manage more cloths. Your donation will help us to for manage more cloths for them. You can also give cloths as donation</p>
+        </div>
+    </div>
 </body>
+
+<footer><b><i>Be Humble for them. You will gain something best from their prayer</i></b>
+</footer>
 </html>
