added button in anout decide part

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     <div class="decide-amount">
         <h1>Decide Your Amount</h1>
         <p>You can decide your amount of donation. some of are given below for you. you can also decide other amount</p>
-        <p>100TK    200TK    500TK    1000TK   5000TK</p>
+        <button class="tk-buton">100 TK</button>
+        <button class="tk-buton">200 TK</button>
+        <button class="tk-buton">500 TK</button>
+        <button class="tk-buton">1000 TK</button>
+        <button class="tk-buton">5000 TK</button>
+        <hr>
         
         <input type="text">
+        <br>
         <button class="donate-button">Donate Now</button>
 
     </div>
