--- a/index.html
+++ b/index.html
@@ -38,30 +38,32 @@
     </div>
 
     <!--donation plan part-->
-    <div>
+    <div class="donate-plan">
         <h1>Our Donate Plan</h1>
         <p>Here is our donate plan. You can choice anyone of them. Then we use your donation to our plan which you choiced</p>
 
-        <div>
+        <div class="donate-plan-box" id="bg-color-1">
+            <img class="donate-plan-img" src="icon/money.jpg" alt="">
             <h1>Money for a family</h1>
-            <img src="icon/money.jpg" alt="">
             <p>In this situation most of the family need more money for recover their problems of flood effect.If you can donate some amount of money to any of the effected family, they will solve at lest some of their problems. Your donation is too much important for them</p>
         </div>
 
-        <div>
+        <div class="donate-plan-box" id="bg-color-2">
+            <img class="donate-plan-img" src="icon/food.png" alt="">
             <h1>Donation for food</h1>
-            <img src="icon/food.png" alt="">
             <p>You can donate for food. We will use your donation for our food service. Maximum people right now out of their house. They can't manage their food. Your donation will help us for manage their food.</p>
         </div>
 
-        <div>
+        <div class="donate-plan-box" id="bg-color-3">
+            <img class="donate-plan-img" src="icon/cloth.png" alt="">
             <h1>Manage cloth or donate for it</h1>
-            <img src="icon/cloth.png" alt="">
             <p>In this bad situation they need cloths. Mianly childrens and womens are need this. They are out of their house and can't manage more cloths. Your donation will help us to for manage more cloths for them. You can also give cloths as donation</p>
         </div>
+        
     </div>
 </body>
 
-<footer><b><i>Be Humble for them. You will gain something best from their prayer</i></b>
+<footer>
+    <b><i>Be Humble for them. You will gain something best from their prayer</i></b>
 </footer>
 </html>
