donate plan box shadow apply

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     <!--amount decide part-->
     <section>
-        <div id="decide-amount-upper-part" class="flexible-container">
+        <div id="decide-amount-upper-part">
             <h1>Decide Your Amount</h1>
             <p>You can decide your amount of donation. some of are given below for you. you can also decide other amount</p>
         </div>
-        <div id="decide-amount-lower-part" class="flexible-container">
+        <div id="decide-amount-lower-part">
             <button class="tk-buton">100 TK</button>
             <button class="tk-buton">200 TK</button>
             <button class="tk-buton">500 TK</button>
