donate amount almost done

--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
     <section class="top-banner">
         <h1 id><span class="white-color">Let's help those who need our support right now.</span></h1>
 
-        <h5>
+        <h4>
             <span class="white-color">We know the current situation of Sylher. This is one of the beautiful district in our country.
             But now-a-days our sylhet if destroyed for the bad effect of flood. People of flooded area nooe our help. we have to rise our hands for them.</span>
-        </h5>
+        </h4>
         <a class="donate-button" target="_blank"  href="">Donate Now</a>
     </section>
 
     <!--amount decide part-->
-    <section>
-        <div id="decide-amount-upper-part">
+    <section class="amount-decide">
+        <div id="amount-decide-upper">
             <h1>Decide Your Amount</h1>
             <p>You can decide your amount of donation. some of are given below for you. you can also decide other amount</p>
         </div>
-        <div id="decide-amount-lower-part">
+
+        <div id="amount-decide-middle">
             <button class="tk-buton">100 TK</button>
             <button class="tk-buton">200 TK</button>
             <button class="tk-buton">500 TK</button>
             <button class="tk-buton">1000 TK</button>
             <button class="tk-buton">5000 TK</button>
-            <hr>
+            
         </div>
+
         <div id="input-fild">
-        <input type="text">
+        <p>Other amount (Taka)</p>
         <br>
-        <button class="donate-button">Donate Now</button>
+        <button id="amount-button">Donate Now</button>
         </div>
     </section>
 
