get our update part done

--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
             </div>
         </div>
         </section>
+
+        <!--get update part-->
+        <section>
+            <div id="get-update-text">
+            <h1>Get Our Update</h1>
+            <p>You can get any of our upcoming working plan by email. If you want to know about our next plan of work then please give your email below</p>
+            </div>
+            <div id="get-update-email">
+                <input type="email">
+                <button id="email-button">Submit</button>
+            </div>
+
+        </section>
 </body>
 
 <!--footer-->
