form section added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,30 @@
         </div>
         </section>
 
+        <!--Form part-->
+        <section>
+            <div class="form-text">
+            <h1>Join with us</h1>
+            <p>You can also join with our team as a volunteer. You can help those suffering people by your hand. If you want to join with us please fillup then from of given below by your valid information</p>
+            </div>
+            
+            <div class="form">
+                <form>
+                    <label for="">Your name : </label><br>
+                    <input type="text"><br>
+                    <label for="">Your address : </label><br>
+                    <input type="text"><br>
+                    <label for="">Mobile : </label><br>
+                    <input type="text"><br>
+                    <label for="">Your email : </label><br>
+                    <input type="email"><br>
+                    <label for="">Are you sure to join with us? </label><br>
+                    <input type="checkbox">
+                </form>
+                <button id="form-button">Submit</button>
+            </div>
+        </section>
+
         <!--get update part-->
         <section>
             <div id="get-update-text">
