--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
 <body>
     <!--top of the website-->
     <section class="top-banner">
-        <h1 id><span class="white-color">Let's help those who need our support right now.</span></h1>
+        <div class="container">
+            <h1 id><span class="white-color">Let's help those who need our support right now.</span></h1>
 
         <h4>
             <span class="white-color">We know the current situation of Sylher. This is one of the beautiful district in our country.
             But now-a-days our sylhet if destroyed for the bad effect of flood. People of flooded area nooe our help. we have to rise our hands for them.</span>
         </h4>
         <a class="donate-button" target="_blank"  href="">Donate Now</a>
+        </div>
     </section>
 
     <!--amount decide part-->
     <section class="amount-decide">
         <div id="amount-decide-upper">
             <h1>Decide Your Amount</h1>
-            <p>You can decide your amount of donation. some of are given below for you. you can also decide other amount</p>
+            <h4>You can decide your amount of donation. some of are given below for you. you can also decide other amount</h4>
         </div>
 
         <div id="amount-decide-middle">
@@ -50,7 +52,7 @@
     <section>
         <div class="donate-plan">
         <h1>Our Donate Plan</h1>
-        <p>Here is our donate plan. You can choice anyone of them. Then we use your donation to our plan which you choiced</p>
+        <h4>Here is our donate plan. You can choice anyone of them. Then we use your donation to our plan which you choiced</h4>
         </div>
 
         <div class="flexible-container">
@@ -78,7 +80,7 @@
         <section>
             <div class="form-text">
             <h1>Join with us</h1>
-            <p>You can also join with our team as a volunteer. You can help those suffering people by your hand. If you want to join with us please fillup then from of given below by your valid information</p>
+            <h4>You can also join with our team as a volunteer. You can help those suffering people by your hand. If you want to join with us please fillup then from of given below by your valid information</h4>
             </div>
             
             <div class="form">
@@ -102,7 +104,7 @@
         <section>
             <div id="get-update-text">
             <h1>Get Our Update</h1>
-            <p>You can get any of our upcoming working plan by email. If you want to know about our next plan of work then please give your email below</p>
+            <h4>You can get any of our upcoming working plan by email. If you want to know about our next plan of work then please give your email below</h4>
             </div>
             <div id="get-update-email">
                 <input type="email">
