alhamdulillah done by my own try

--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
 
 <!--footer-->
 <footer>
-    <b><i>Be Humble for them. You will gain something best from their prayer</i></b>
+    <b><i>Be Humble for them. You will gain something best from their prayer.</i></b>
 </footer>
 </html>
